--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,8 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "minimal",
+	"name": "Minimal",
 	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"isDesktopOnly": false
+	"minAppVersion": "0.16.0",
+	"description": "Basically the default theme these days",
+	"author": "@kepano"
 }
