--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Minimal",
+	"name": "Windows 10",
 	"version": "1.0.7",
 	"minAppVersion": "0.16.0",
 	"description": "Basically the default theme these days",
